--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -3,14 +3,7 @@
 
 {% block title %}Login{% endblock %}
 
-{% block styles %}
-{{super()}}
-    <style type="text/css">
-      body {
-        background-image: url("/static/img/noise.png") ;
-      }
-    </style>
-{% endblock %}
+
 
 {% block navbar %}
    
@@ -33,51 +26,7 @@
 
         </div>
 
-        <div class="hidden-xs" >
-          <div class="collapse navbar-collapse " id="myNavbar">
-              <ul class="nav navbar-nav navbar-right">
-                  <li>
-                  
-                  <li class="dropdown">
-                    <a class="dropdown-toggle navbar-brand" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-log-in"></span> Login
-                    <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <form class="form-horizontal" role="form">
-                      <li>
-                        <div class="form-group">
-                          
-                           
-                          <div class="col-sm-offset-1 col-sm-10">
-                            <input type="text" class="form-control" id="userName" placeholder="User Name"   name="username" value="{{ request.form.username }}" required>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li>
-                        <div class="form-group">
-                          
-                             
-                          <div class="col-sm-offset-1 col-sm-10">
-                            <input type="password" class="form-control" id="pwd" placeholder="Password"  name="password" value="{{ request.form.password }}" required>
-                          </div>
-                        </div>
-                      </li>
-
-                      <li>
-                        <div class="form-group">
-                          <div class="col-sm-offset-1 col-sm-10">
-                            <button id="loginButton" formmethod="post"  type="submit" class="btn btn-default">Submit</button>
-                          </div>
-                        </div>
-                      </li>
-                      </form>
-                    </ul>
-                  </li>
-                  
-                  </li>
-              </ul>
-          </div>
-        </div>
+ 
         
       </div>
     </nav>
@@ -103,61 +52,24 @@
 
     
 
-  <div class="hidden-xs" >
-  <div class="container col-sm-8 col-sm-offset-2">
-      <br>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 640px; height=480px; margin: 0 auto">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        
-      </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img  src="{{url_for('.static', filename='/img/dredger 1 carousel.jpg')}}" >
-        </div>
 
-        <div class="item">
-          <img src="{{url_for('.static', filename='/img/dredger 2 carousel.jpg')}}" >
-
-          
-        </div>
-
-        </div>
-        
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-  </div>
-
-	<div class="visible-xs" >
 
 		<div class="page-header">
-			<h1 style="color:white;">Login</h1>
+			<h1 >Login</h1>
 		</div>
 		
 		<div class="container">
 			<form class="form-horizontal" role="form">
 				<div class="form-group">
-					<!--<label class="control-label col-sm-2" for="userName" style="color:white;">User Name:</label>-->
+					<!--<label class="control-label col-sm-2" for="userName" >User Name:</label>-->
 					<div class="col-sm-4">
 						<input type="text" class="form-control" id="userName" placeholder="Enter User Name" name="username" value="{{ request.form.username }}" required>
 					</div>
 				</div>
 				<br/>
 				<div class="form-group">
-					<!--<label class="control-label col-sm-2" for="pwd" style="color:white;">Password:</label>-->
+					<!--<label class="control-label col-sm-2" for="pwd" >Password:</label>-->
 					<div class="col-sm-4">
 						<input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password" value="{{ request.form.password }}" required>
 					</div>
@@ -172,8 +84,7 @@
 				</div>
 			</form>
 		</div>
-	</div>
-
+	
 {% endif %}
 
 {% endblock %}
