--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -22,7 +22,7 @@
 	            </button>
         	</div>
 
-            <a class="navbar-brand" href="/select"><p><img width="20" height="20" src="{{ url_for('static', filename='/img/favicon.ico') }}"> Dredger</p></a>
+            <a class="navbar-brand" href="/select"><p><img width="20" height="20" src="{{ url_for('static', filename='/img/favicon.ico') }}"> RPi</p></a>
 
         </div>
 
