Fixed live updating

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -2,44 +2,7 @@
 {% extends "dredger1/base.html" %}
 {% block title %}Home{% endblock %}
 
-{% block scripts %}
 
- {{super()}}
- <script type="text/javascript">
-		$(document).ready(function(){
-			var number=10;
-			var name= 'dummyNoUse';
-			$.post("{{ url_for('static', filename='ajax/dredger1/fetch_from_db.php') }}",{name:name},function(data){
-			$('span#time').text(data.time);
-		    $('span#consumption').text(data.consumption);
-		    },'json');
-			function redirect(num){
-				number=num;
-				countdown();
-			}
-
-			function countdown(){
-				
-				
-				setTimeout(countdown,1000);
-				number--;
-				$('#box').html("Redirecting in "+number+" seconds.");
-				if(number<=0)
-				{
-					var name= 'dummyNoUse';
-					$.post("{{ url_for('static', filename='ajax/dredger1/fetch_from_db.php') }}",{name:name},function(data){
-					$('span#time').text(data.time);
-				    $('span#consumption').text(data.consumption);
-				    },'json');
-					number=3;
-				}
-			}
-		redirect(3);
-
-		});
-</script>
-
-{% endblock scripts %}
 
 {% block navbar %}
 	 
@@ -88,343 +51,7 @@
   <h2 class="page-header" style="color:white;">Dredger 1: Flowchart</h2>
   
 </div>
-
-
-
-  	<div class="container">
-	  	<div class="pull-right">
-	          <h4><span class="label label-default" > <span id="time"></span> </span></h4>
-	    </div>
-  	</div>
-  	<h1 class="visible-xs" >
-  	<!--Code for extra small screen starts-->
-	  	<div class="container">
-		  	
-			
-					      
-			      	<div class="row">
-			      		<div class="col-xs-4 text-center col-xs-offset-4 other ">
-				        	<span style="color:black;" class="btn btn-default btn-xs">
-				        	<b>
-				        	<span id="storage_tank_cap" style="color:rgb(184,0,0);"></span><br/>Storage Tank<br/> <span id='consumption' style="color:rgb(0, 32, 129);"></span>
-				        	</b>
-				        	</span> 
-					    </div> 
-					</div>
-			      	
-			      	<div class="row">
-			      		<div class="col-xs-4 text-center col-xs-offset-4 other ">
-				        	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>  
-					    </div> 
-					</div>
-
-			      	
-		       		
-		       		<div class="row">
-		       			
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-left"></span></p>
-				        </div>
-
-				        <div class="col-xs-4">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	<span id='service_tank_cap' style="color:rgb(184,0,0);"></span><br/>
-				          	Service Tank<br/>
-				          	<span id='service_tank_level' style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-right"></span></p>
-				        </div>
-				        
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-		       		</div>
-		       		
-		       		<div class="row">
-		       			<div class="col-xs-4 ">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	Flowmeter IN 1<br/>
-				          	<span id='flowmeter_1_in' style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-		       			<div class="col-xs-4 col-xs-offset-4">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	Flowmeter IN 2<br/><span id='flowmeter_2_in' style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-xs-4 text-center other ">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	<span id="engine_1_status" style="color:rgb(184,0,0);"></span><br/>
-				          	Engine 1<br/>
-				          	<span id="engine_1_level" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-				        
-				        <div class="col-xs-4 text-center col-xs-offset-4 other ">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	<span id="engine_2_status" style="color:rgb(184,0,0);"></span><br/>
-				          	Engine 1<br/>
-				          	<span id="engine_2_level" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-
-				        <div class="col-xs-4 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-xs-4 text-center other ">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	Flowmeter Out 1<br/>
-				          	<span id='flowmeter_1_out' style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-
-				        
-				        <div class="col-xs-4 text-center col-xs-offset-4 other ">
-				          	<span style="color:black;"class="btn btn-default btn-xs">
-				          	<b>
-				          	Flowmeter Out 2<br/><span id='flowmeter_2_out' style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		
-		       		<div class="row">
-		       			
-
-		       			<div class="col-xs-4 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-right"></span></p>
-				        </div>
-				        <div class="col-xs-4 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-		       			<div class="col-xs-4 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-left"></span></p>
-				        </div>
-				        
-		       		</div>
-			    
-		
-			
-		</div>
-  	<!--Code for extra small screen ends-->
-  	</h1>
-
-	<h1 class="hidden-xs" >
-	<!--Code for other screen size starts-->
-	  	<div class="container">
-		  	
-				
-					      
-			      	<div class="row">
-			      		<div class="col-sm-2 text-center col-sm-offset-4 other ">
-			      			
-				        	<span style="color:black;" class="btn btn-default btn-lg">
-				        	<b>
-				        	<span id="storage_tank_cap" style="color:rgb(184,0,0);"></span><br/>
-				        	Storage Tank<br/> 
-				        	<span id='consumption' style="color:rgb(0, 32, 129);"></span> 
-				        	</b>
-				        	</span> 
-
-					    </div> 
-					</div>
-			      	
-			      	<div class="row">
-			      		<div class="col-sm-2 text-center col-sm-offset-4 other ">
-				        	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>  
-					    </div> 
-					</div>
-
-			      	
-		       		
-		       			       		
-		       		
-		       		<div class="row">
-		       			<div class="col-sm-2 ">
-				          	<span style="color:black;"class="btn btn-default btn-lg">
-				          	<b>
-				          	Flowmeter IN 1<br/>
-				          	<span id="flowmeter_1_in" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-
-				        <div class="col-sm-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-left"></span></p>
-				        </div>
-
-				        <div class="col-sm-2">
-				          	<span style="color:black;"class="btn btn-default btn-lg">
-				          	<b>
-				          	<span id="service_tank_cap" style="color:rgb(184,0,0);"></span><br/>Service Tank<br/><span id="service_tank_level" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-
-				        <div class="col-sm-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-right"></span></p>
-				        </div>
-
-		       			<div class="col-sm-2 ">
-		       				<span style="color:black;"class="btn btn-default btn-lg">
-		       				<b>
-		       				Flowmeter IN 2<br/><span id="flowmeter_2_in" style="color:rgb(0, 32, 129);"></span>
-				          	<b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-sm-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-				        <div class="col-sm-2 col-sm-offset-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-
-				        <div class="col-sm-2 col-sm-offset-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-sm-2 text-center other ">
-				        	<span style="color:black;"class="btn btn-default btn-lg">
-				        	<b>
-				        	<span id="engine_1_status" style="color:rgb(184,0,0) ;"></span><br/>
-				        	Engine 1<br/><span id="engine_1_level" style="color:rgb(0, 32, 129);"></span>
-				        	</b>
-				        	</span>
-				        </div>
-				        
-				        <div class="col-sm-2 text-center col-sm-offset-6 other ">
-				          	<span style="color:black;"class="btn btn-default btn-lg">
-				          	<b>
-				          	<span id="engine_2_status" style="color:rgb(184,0,0) ;"></span><br/>
-				          	Engine 2<br/><span id="engine_2_level" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-sm-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-				        <div class="col-sm-2 col-sm-offset-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-
-				        <div class="col-sm-2 col-sm-offset-2 text-center other ">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-down"></span></p>
-				        </div>
-		       		</div>
-
-		       		<div class="row">
-		      		    			        
-				        <div class="col-sm-2 text-center other ">
-				          	<span style="color:black;"class="btn btn-default btn-lg">
-				          	<b>
-				          	Flowmeter Out 1<br/><span id="flowmeter_1_out" style="color:rgb(0, 32, 129);"></span>
-				          	</b>
-				          	</span>
-				        </div>
-
-				        
-				        <div class="col-sm-2 text-center col-sm-offset-6 other ">
-				          	<span style="color:black;"class="btn btn-default btn-lg">
-				          	<b>
-				          	Flowmeter Out 2<br/><span id="flowmeter_2_out" style="color:rgb(0, 32, 129);"></span></b>
-				          	</span>
-				        </div>
-		       		</div>
-
-		       		
-		       		<div class="row">
-		       			
-
-		       			<div class="col-sm-2 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-right"></span></p>
-				        </div>
-				        <div class="col-sm-2 col-sm-offset-2 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-up"></span></p>
-				        </div>
-		       			<div class="col-sm-2 col-sm-offset-2 text-center other">
-				          	<p class="btn"><span style="color:white;" class="glyphicon glyphicon-arrow-left"></span></p>
-				        </div>
-				        
-		       		</div>
-			    
-		
-			
-		</div>
-		<!--Code for other screen size ends-->
-
-	</h1>
-
-
+<iframe allowtransparency="true" style="background: #FFFFFF;" src="{{url_for('.static', filename='table.php')}}" width="100%" height="98"></iframe>
  <!-- ###################### --> 
 
 <!--Ends here $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$-->
