--- a/web/templates/filter.html
+++ b/web/templates/filter.html
@@ -102,7 +102,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="/select"><p><img width="20" height="20" src="{{ url_for('static', filename='/img/favicon.ico') }}"> Dredger</p></a>
+            <a class="navbar-brand" ><p><img width="20" height="20" src="{{ url_for('static', filename='/img/favicon.ico') }}"> RPi</p></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -136,7 +136,7 @@
   {% if results==None or results.page==1%} 
   
       <div class="page-header">
-        <h2 >Dredger 1: Filter</h2>
+        <h2 >Filter</h2>
       </div>
     
       {% for message in get_flashed_messages() %}
