WebApp Running from apache

--- a/web/templates/filter.html
+++ b/web/templates/filter.html
@@ -302,9 +302,9 @@ and results.pages > 1
             
             </td>
 
-            <td class="test" href="#" data-toggle="tooltip" data-placement="top" title="Storage Tank Level" data-container="body">
+            <td class="test" href="#" data-toggle="tooltip" data-placement="top" title="Power Consumption" data-container="body">
               
-              {{ result.consumption}}
+              {{ result.power}}
 
             </td>
 
