--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -53,7 +53,7 @@
 
 <div class="container">
 <br/>
-	<iframe allowtransparency="true"  src="{{url_for('.static', filename='table2.php')}}" width="100%" height="98"></iframe>
+	<iframe allowtransparency="true"  src="{{url_for('.static', filename='table.php')}}" width="100%" height="98"></iframe>
 </div>
  <!-- ###################### --> 
 
